no anda el assembler generado... revisalo MERY